// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar component renders correctly 1`] = `
<Sidebar
  activeSection="some section"
  activities={
    Array [
      Object {
        "anchor": "#key1",
        "key": "key 1234",
      },
      Object {
        "anchor": "#key2",
        "key": "key 4321",
      },
    ]
  }
  jumpTo={[MockFunction]}
  place={
    Object {
      "id": "place id",
      "name": "place name",
    }
  }
>
  <LinksContextConsumer>
    <aside
      className="site-sidebar"
    >
      <div
        className="ds-u-display--flex ds-u-align-items--center ds-u-border-bottom--1 ds-u-padding-y--2 ds-u-margin-bottom--4"
      >
        <img
          alt="place name"
          className="ds-u-margin-right--2"
          height="40"
          src="/static/img/states/place id.svg"
          width="40"
        />
        <h1>
          place name
        </h1>
      </div>
      <VerticalNav
        collapsed={false}
        items={
          Array [
            Object {
              "children": Array [
                Object {
                  "id": "apd-state-profile-office",
                  "label": "apd.stateProfile.directorAndAddress.title",
                  "onClick": [Function],
                },
              ],
              "id": "apd-state-profile",
              "label": "apd.stateProfile.title",
              "onClick": [Function],
            },
          ]
        }
        selectedId="some section"
      >
        <ul
          className="ds-c-vertical-nav"
        >
          <VerticalNavItem
            _selectedId="some section"
            ariaCollapsedStateButtonLabel="Expand sub-navigation"
            ariaExpandedStateButtonLabel="Collapse sub-navigation"
            defaultCollapsed={false}
            id="apd-state-profile"
            key="apd-state-profileundefinedapd.stateProfile.title"
            label="apd.stateProfile.title"
            onClick={[Function]}
            selected={false}
          >
            <li
              className="ds-c-vertical-nav__item"
            >
              <VerticalNavItemLabel
                ariaCollapsedStateButtonLabel="Expand sub-navigation"
                ariaExpandedStateButtonLabel="Collapse sub-navigation"
                collapsed={false}
                hasSubnav={false}
                label="apd.stateProfile.title"
                onClick={[Function]}
                selected={false}
                subnavId="apd-state-profile__subnav"
              >
                <div
                  className="ds-c-vertical-nav__label"
                  onClick={[Function]}
                >
                  apd.stateProfile.title
                </div>
              </VerticalNavItemLabel>
            </li>
          </VerticalNavItem>
        </ul>
      </VerticalNav>
    </aside>
  </LinksContextConsumer>
</Sidebar>
`;

exports[`Sidebar component renders the active section correctly if it is an activity section 1`] = `
<Sidebar
  activeSection="activity-key 1234-okrs"
  activities={
    Array [
      Object {
        "anchor": "#key1",
        "key": "key 1234",
      },
      Object {
        "anchor": "#key2",
        "key": "key 4321",
      },
    ]
  }
  jumpTo={[MockFunction]}
  place={
    Object {
      "id": "place id",
      "name": "place name",
    }
  }
>
  <LinksContextConsumer>
    <aside
      className="site-sidebar"
    >
      <div
        className="ds-u-display--flex ds-u-align-items--center ds-u-border-bottom--1 ds-u-padding-y--2 ds-u-margin-bottom--4"
      >
        <img
          alt="place name"
          className="ds-u-margin-right--2"
          height="40"
          src="/static/img/states/place id.svg"
          width="40"
        />
        <h1>
          place name
        </h1>
      </div>
      <VerticalNav
        collapsed={false}
        items={
          Array [
            Object {
              "children": Array [
                Object {
                  "id": "apd-state-profile-office",
                  "label": "apd.stateProfile.directorAndAddress.title",
                  "onClick": [Function],
                },
              ],
              "id": "apd-state-profile",
              "label": "apd.stateProfile.title",
              "onClick": [Function],
            },
          ]
        }
        selectedId="activity-key 1234-okrs"
      >
        <ul
          className="ds-c-vertical-nav"
        >
          <VerticalNavItem
            _selectedId="activity-key 1234-okrs"
            ariaCollapsedStateButtonLabel="Expand sub-navigation"
            ariaExpandedStateButtonLabel="Collapse sub-navigation"
            defaultCollapsed={false}
            id="apd-state-profile"
            key="apd-state-profileundefinedapd.stateProfile.title"
            label="apd.stateProfile.title"
            onClick={[Function]}
            selected={false}
          >
            <li
              className="ds-c-vertical-nav__item"
            >
              <VerticalNavItemLabel
                ariaCollapsedStateButtonLabel="Expand sub-navigation"
                ariaExpandedStateButtonLabel="Collapse sub-navigation"
                collapsed={false}
                hasSubnav={false}
                label="apd.stateProfile.title"
                onClick={[Function]}
                selected={false}
                subnavId="apd-state-profile__subnav"
              >
                <div
                  className="ds-c-vertical-nav__label"
                  onClick={[Function]}
                >
                  apd.stateProfile.title
                </div>
              </VerticalNavItemLabel>
            </li>
          </VerticalNavItem>
        </ul>
      </VerticalNav>
    </aside>
  </LinksContextConsumer>
</Sidebar>
`;

exports[`Sidebar component renders the active section with its children open 1`] = `
<Sidebar
  activeSection="proposed-budget"
  activities={
    Array [
      Object {
        "anchor": "#key1",
        "key": "key 1234",
      },
      Object {
        "anchor": "#key2",
        "key": "key 4321",
      },
    ]
  }
  jumpTo={[MockFunction]}
  place={
    Object {
      "id": "place id",
      "name": "place name",
    }
  }
>
  <LinksContextConsumer>
    <aside
      className="site-sidebar"
    >
      <div
        className="ds-u-display--flex ds-u-align-items--center ds-u-border-bottom--1 ds-u-padding-y--2 ds-u-margin-bottom--4"
      >
        <img
          alt="place name"
          className="ds-u-margin-right--2"
          height="40"
          src="/static/img/states/place id.svg"
          width="40"
        />
        <h1>
          place name
        </h1>
      </div>
      <VerticalNav
        collapsed={false}
        items={
          Array [
            Object {
              "children": Array [
                Object {
                  "id": "apd-state-profile-office",
                  "label": "apd.stateProfile.directorAndAddress.title",
                  "onClick": [Function],
                },
              ],
              "id": "apd-state-profile",
              "label": "apd.stateProfile.title",
              "onClick": [Function],
            },
          ]
        }
        selectedId="proposed-budget"
      >
        <ul
          className="ds-c-vertical-nav"
        >
          <VerticalNavItem
            _selectedId="proposed-budget"
            ariaCollapsedStateButtonLabel="Expand sub-navigation"
            ariaExpandedStateButtonLabel="Collapse sub-navigation"
            defaultCollapsed={false}
            id="apd-state-profile"
            key="apd-state-profileundefinedapd.stateProfile.title"
            label="apd.stateProfile.title"
            onClick={[Function]}
            selected={false}
          >
            <li
              className="ds-c-vertical-nav__item"
            >
              <VerticalNavItemLabel
                ariaCollapsedStateButtonLabel="Expand sub-navigation"
                ariaExpandedStateButtonLabel="Collapse sub-navigation"
                collapsed={false}
                hasSubnav={false}
                label="apd.stateProfile.title"
                onClick={[Function]}
                selected={false}
                subnavId="apd-state-profile__subnav"
              >
                <div
                  className="ds-c-vertical-nav__label"
                  onClick={[Function]}
                >
                  apd.stateProfile.title
                </div>
              </VerticalNavItemLabel>
            </li>
          </VerticalNavItem>
        </ul>
      </VerticalNav>
    </aside>
  </LinksContextConsumer>
</Sidebar>
`;

exports[`Sidebar component uses the PNG file extension for territories (these are not SVGs) 1`] = `
<Sidebar
  activeSection="some section"
  activities={
    Array [
      Object {
        "anchor": "#key1",
        "key": "key 1234",
      },
      Object {
        "anchor": "#key2",
        "key": "key 4321",
      },
    ]
  }
  jumpTo={[MockFunction]}
  place={
    Object {
      "id": "vi",
      "name": "U.S. Virgin Islands",
    }
  }
>
  <LinksContextConsumer>
    <aside
      className="site-sidebar"
    >
      <div
        className="ds-u-display--flex ds-u-align-items--center ds-u-border-bottom--1 ds-u-padding-y--2 ds-u-margin-bottom--4"
      >
        <img
          alt="U.S. Virgin Islands"
          className="ds-u-margin-right--2"
          height="40"
          src="/static/img/states/vi.png"
          width="40"
        />
        <h1>
          U.S. Virgin Islands
        </h1>
      </div>
      <VerticalNav
        collapsed={false}
        items={
          Array [
            Object {
              "children": Array [
                Object {
                  "id": "apd-state-profile-office",
                  "label": "apd.stateProfile.directorAndAddress.title",
                  "onClick": [Function],
                },
              ],
              "id": "apd-state-profile",
              "label": "apd.stateProfile.title",
              "onClick": [Function],
            },
          ]
        }
        selectedId="some section"
      >
        <ul
          className="ds-c-vertical-nav"
        >
          <VerticalNavItem
            _selectedId="some section"
            ariaCollapsedStateButtonLabel="Expand sub-navigation"
            ariaExpandedStateButtonLabel="Collapse sub-navigation"
            defaultCollapsed={false}
            id="apd-state-profile"
            key="apd-state-profileundefinedapd.stateProfile.title"
            label="apd.stateProfile.title"
            onClick={[Function]}
            selected={false}
          >
            <li
              className="ds-c-vertical-nav__item"
            >
              <VerticalNavItemLabel
                ariaCollapsedStateButtonLabel="Expand sub-navigation"
                ariaExpandedStateButtonLabel="Collapse sub-navigation"
                collapsed={false}
                hasSubnav={false}
                label="apd.stateProfile.title"
                onClick={[Function]}
                selected={false}
                subnavId="apd-state-profile__subnav"
              >
                <div
                  className="ds-c-vertical-nav__label"
                  onClick={[Function]}
                >
                  apd.stateProfile.title
                </div>
              </VerticalNavItemLabel>
            </li>
          </VerticalNavItem>
        </ul>
      </VerticalNav>
    </aside>
  </LinksContextConsumer>
</Sidebar>
`;
